[gd_scene load_steps=24 format=3 uid="uid://thcn6q3xjpc3"]

[ext_resource type="Script" path="res://Scenes/world.gd" id="1_ow7cb"]
[ext_resource type="PackedScene" uid="uid://ca3vf0fcpsaok" path="res://Inventory/inventory.tscn" id="1_wlgo8"]
[ext_resource type="Script" path="res://Inventory/inventory_interface.gd" id="2_fuv11"]
[ext_resource type="Texture2D" uid="uid://dfa6xowwfnhb0" path="res://Assets/Spritesheets/dirt_grass.png" id="3_eg3yg"]
[ext_resource type="Texture2D" uid="uid://b6qcips0o6cnj" path="res://Assets/Spritesheets/2D Pixel Dungeon Asset Pack/character and tileset/Dungeon_Tileset.png" id="3_l0kfx"]
[ext_resource type="PackedScene" uid="uid://dwlv1xjpnegqp" path="res://Inventory/slot.tscn" id="4_567qb"]
[ext_resource type="PackedScene" uid="uid://minqw8nk33mo" path="res://Inventory/hot_bar_inventory.tscn" id="5_micc5"]
[ext_resource type="PackedScene" uid="uid://dw1qqjvnwesmh" path="res://Player/player.tscn" id="6_ljyes"]
[ext_resource type="Script" path="res://Inventory/inventory_data_equip.gd" id="8_lr4pq"]
[ext_resource type="PackedScene" uid="uid://bjgi53u3gwakm" path="res://Item/Pick_Up/pick_up.tscn" id="10_e5385"]
[ext_resource type="Resource" uid="uid://bele4ixmfb1jt" path="res://Item/Items/stone_sword.tres" id="11_dklfp"]
[ext_resource type="Script" path="res://Inventory/slot_data.gd" id="12_3dqiq"]
[ext_resource type="PackedScene" uid="uid://brdhrcx46ukkw" path="res://Interactable/chest.tscn" id="13_dckhx"]
[ext_resource type="Script" path="res://Inventory/inventory_data.gd" id="14_kkqww"]
[ext_resource type="Resource" uid="uid://yd1nupc6rprb" path="res://Item/Items/apple.tres" id="15_v62se"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_xtw4a"]
texture = ExtResource("3_eg3yg")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0

[sub_resource type="TileSet" id="TileSet_ty5yg"]
sources/1 = SubResource("TileSetAtlasSource_xtw4a")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_rfo8i"]
texture = ExtResource("3_l0kfx")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:0/0 = 0
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:0/0 = 0
5:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:0/0/physics_layer_0/angular_velocity = 0.0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:0/0 = 0
6:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:0/0/physics_layer_0/angular_velocity = 0.0
7:0/0 = 0
7:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:0/0/physics_layer_0/angular_velocity = 0.0
8:0/0 = 0
8:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:0/0/physics_layer_0/angular_velocity = 0.0
9:0/0 = 0
9:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
4:1/0 = 0
4:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:1/0/physics_layer_0/angular_velocity = 0.0
5:1/0 = 0
5:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:1/0/physics_layer_0/angular_velocity = 0.0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:1/0 = 0
6:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:1/0/physics_layer_0/angular_velocity = 0.0
7:1/0 = 0
7:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:1/0/physics_layer_0/angular_velocity = 0.0
8:1/0 = 0
8:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:1/0/physics_layer_0/angular_velocity = 0.0
9:1/0 = 0
9:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:1/0/physics_layer_0/angular_velocity = 0.0
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
4:2/0 = 0
4:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:2/0/physics_layer_0/angular_velocity = 0.0
5:2/0 = 0
5:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:2/0/physics_layer_0/angular_velocity = 0.0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:2/0 = 0
6:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:2/0/physics_layer_0/angular_velocity = 0.0
7:2/0 = 0
7:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:2/0/physics_layer_0/angular_velocity = 0.0
8:2/0 = 0
8:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:2/0/physics_layer_0/angular_velocity = 0.0
9:2/0 = 0
9:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:2/0/physics_layer_0/angular_velocity = 0.0
0:3/0 = 0
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:3/0 = 0
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
2:3/0 = 0
2:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_0/angular_velocity = 0.0
3:3/0 = 0
3:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:3/0/physics_layer_0/angular_velocity = 0.0
4:3/0 = 0
4:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:3/0/physics_layer_0/angular_velocity = 0.0
5:3/0 = 0
5:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:3/0/physics_layer_0/angular_velocity = 0.0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:4/0 = 0
0:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:4/0/physics_layer_0/angular_velocity = 0.0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:4/0 = 0
1:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:4/0/physics_layer_0/angular_velocity = 0.0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:4/0 = 0
2:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:4/0/physics_layer_0/angular_velocity = 0.0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:4/0 = 0
3:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:4/0/physics_layer_0/angular_velocity = 0.0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:4/0 = 0
4:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:4/0/physics_layer_0/angular_velocity = 0.0
4:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:4/0 = 0
5:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:4/0/physics_layer_0/angular_velocity = 0.0
5:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:5/0 = 0
0:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:5/0/physics_layer_0/angular_velocity = 0.0
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:5/0 = 0
1:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:5/0/physics_layer_0/angular_velocity = 0.0
2:5/0 = 0
2:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:5/0/physics_layer_0/angular_velocity = 0.0
3:5/0 = 0
3:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:5/0/physics_layer_0/angular_velocity = 0.0
4:5/0 = 0
4:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:5/0/physics_layer_0/angular_velocity = 0.0
5:5/0 = 0
5:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:5/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_l4pyq"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_rfo8i")

[sub_resource type="Resource" id="Resource_2u108"]
script = ExtResource("8_lr4pq")
slot_datas = Array[ExtResource("12_3dqiq")]([null])

[sub_resource type="Resource" id="Resource_yucbu"]
script = ExtResource("12_3dqiq")
item_data = ExtResource("11_dklfp")
quantity = 1

[sub_resource type="Resource" id="Resource_gk13o"]
script = ExtResource("12_3dqiq")
item_data = ExtResource("15_v62se")
quantity = 1

[sub_resource type="Resource" id="Resource_2gldg"]
script = ExtResource("14_kkqww")
slot_datas = Array[ExtResource("12_3dqiq")]([SubResource("Resource_gk13o"), null, null, null, null, null])

[node name="World" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_ow7cb")

[node name="BackgroundTilemap" type="TileMap" parent="."]
position = Vector2(-62, -39)
tile_set = SubResource("TileSet_ty5yg")
format = 2
layer_0/name = "ground"
layer_0/tile_data = PackedInt32Array(65536, 262145, 4, 131072, 262145, 5, 65537, 327681, 4, 131073, 327681, 5, 196608, 262145, 4, 262144, 262145, 5, 196609, 327681, 4, 262145, 327681, 5, 196610, 262145, 4, 262146, 262145, 5, 196611, 327681, 4, 262147, 327681, 5, 0, 262145, 5, 1, 327681, 5, 2, 262145, 5, 65538, 262145, 4, 3, 327681, 5, 65539, 327681, 4, 4, 262145, 5, 65540, 262145, 4, 5, 327681, 5, 65541, 327681, 4, 131074, 262145, 5, 131075, 327681, 5, 131076, 262145, 5, 196612, 262145, 4, 131077, 327681, 5, 196613, 327681, 4, 131078, 262145, 5, 196614, 262145, 4, 131079, 327681, 5, 196615, 327681, 4, 327684, 262145, 4, 393220, 262145, 5, 327685, 327681, 4, 393221, 327681, 5, 262148, 262145, 5, 262149, 327681, 5, 327680, 262145, 4, 393216, 262145, 5, 327681, 327681, 4, 393217, 327681, 5, 327682, 262145, 4, 393218, 262145, 5, 327683, 327681, 4, 393219, 327681, 5, 327686, 262145, 4, 393222, 262145, 5, 327687, 327681, 4, 393223, 327681, 5, 262150, 262145, 5, 262151, 327681, 5, 196616, 262145, 4, 262152, 262145, 5, 196617, 327681, 4, 262153, 327681, 5, 65544, 262145, 4, 131080, 262145, 5, 65545, 327681, 4, 131081, 327681, 5, 65542, 262145, 4, 65543, 327681, 4, -65530, 262145, 4, 6, 262145, 5, -65529, 327681, 4, 7, 327681, 5, -65532, 262145, 4, -65531, 327681, 4, -65534, 262145, 4, -65533, 327681, 4, -65536, 262145, 4, -65535, 327681, 4, 131070, 262145, 4, 196606, 262145, 5, 131071, 327681, 4, 196607, 327681, 5, 262142, 262145, 4, 327678, 262145, 5, 262143, 327681, 4, 327679, 327681, 5, -2, 262145, 4, 65534, 262145, 5, 65535, 327681, 5, -1, 327681, 4, -65528, 262145, 4, 8, 262145, 5, 9, 327681, 5, -65527, 327681, 4, 327688, 262145, 4, 393224, 262145, 5, 393225, 327681, 5, 327689, 327681, 4, 393214, 262145, 4, 458750, 262145, 5, 458751, 327681, 5, 393215, 327681, 4)

[node name="WallsTilemap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_l4pyq")
format = 2
layer_0/name = "floor"
layer_1/name = "walls"
layer_1/tile_data = PackedInt32Array(-196614, 131072, 0, -196613, 196608, 0, -196612, 131072, 0, -196611, 196608, 0, -196610, 131072, 0, -196609, 196608, 0, -262144, 131072, 0, -262143, 196608, 0, -262142, 131072, 0, -262141, 196608, 0, -262140, 131072, 0, -262139, 196608, 0, -262138, 327680, 0, -196602, 327680, 1, -131066, 327680, 2, -65530, 327680, 3, 6, 327680, 1, 65542, 327680, 1, 131078, 327680, 2, 196614, 327680, 3, 262150, 327680, 4, 262146, 65536, 4, 262147, 131072, 4, 262148, 196608, 4, 262149, 262144, 4, 327678, 65536, 4, 327679, 131072, 4, 262144, 196608, 4, 262145, 262144, 4, 327674, 65536, 4, 327675, 131072, 4, 327676, 196608, 4, 327677, 262144, 4, 65529, 0, 0, 131065, 0, 1, 196601, 0, 2, 262137, 0, 3, 327673, 0, 4, -196615, 0, 0, -131079, 0, 1, -65543, 0, 2, -7, 0, 3)

[node name="UI" type="CanvasLayer" parent="."]

[node name="InventoryInterface" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(0.360003, 0.360003)
script = ExtResource("2_fuv11")

[node name="PlayerInventory" parent="UI/InventoryInterface" instance=ExtResource("1_wlgo8")]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 50.0

[node name="EquipInventory" parent="UI/InventoryInterface" instance=ExtResource("1_wlgo8")]
layout_mode = 0
offset_left = 450.0
offset_top = 10.0
offset_right = 490.0
offset_bottom = 50.0

[node name="ExternalInventory" parent="UI/InventoryInterface" instance=ExtResource("1_wlgo8")]
visible = false
layout_mode = 0
offset_left = 291.664
offset_top = 16.6665
offset_right = 331.664
offset_bottom = 56.6665

[node name="GrabbedSlot" parent="UI/InventoryInterface" instance=ExtResource("4_567qb")]
visible = false
modulate = Color(1, 1, 1, 0.513726)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
offset_left = 10.0
offset_top = 10.0
offset_right = 74.0
offset_bottom = 74.0

[node name="HotBarInventory" parent="UI" instance=ExtResource("5_micc5")]
offset_left = 120.0
offset_top = 155.0
offset_right = 540.0
offset_bottom = 235.0
scale = Vector2(0.225533, 0.225533)

[node name="Player" parent="." instance=ExtResource("6_ljyes")]
z_as_relative = false
equip_inventory_data = SubResource("Resource_2u108")

[node name="Pickup" parent="." instance=ExtResource("10_e5385")]
position = Vector2(62, 0)
slot_data = SubResource("Resource_yucbu")

[node name="Chest" parent="." instance=ExtResource("13_dckhx")]
z_as_relative = false
position = Vector2(-84, -45)
scale = Vector2(0.273473, 0.273473)
inventory_data = SubResource("Resource_2gldg")

[connection signal="drop_slot_data" from="UI/InventoryInterface" to="." method="_on_inventory_interface_drop_slot_data"]
[connection signal="gui_input" from="UI/InventoryInterface" to="UI/InventoryInterface" method="_on_gui_input"]
